feat: 完整的儿童涂色创作平台
- ✅ 用户注册登录系统
- ✅ 积分充值和消费机制
- ✅ 兑换码生成和使用
- ✅ AI图片生成功能
- ✅ 智能配色推荐
- ✅ 管理员后台完整功能
- ✅ 响应式前端设计
- ✅ 下载功能和状态管理
- ✅ 项目文件清理优化

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,57 @@
 # .gitignore 文件内容示例
-.env
+# Python
 __pycache__/
-*.pyc
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual Environment
+backend/venv/
+venv/
+ENV/
+env/
+.venv/
+
+# Database files
+*.db
+*.sqlite
+*.sqlite3
+backend/instance/*.db
+
+# Environment variables
+.env
+.env.local
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+
+# Temporary files
+*.tmp
+*.temp
 # 其他需要忽略的文件或文件夹...
