--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: kiddie-color-creations-backend
     env: python
     buildCommand: "pip install -r backend/requirements.txt"
-    startCommand: "gunicorn --bind 0.0.0.0:$PORT --chdir backend app:app"
+    startCommand: "gunicorn --bind 0.0.0.0:$PORT backend.app:app"
     envVars:
       - key: SECRET_KEY
         generateValue: true
