--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: kiddie-color-creations-backend
     env: python
-    buildCommand: "pip install -r backend/requirements.txt"
-    startCommand: "gunicorn --bind 0.0.0.0:$PORT backend.app:app"
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: "gunicorn --bind 0.0.0.0:$PORT app:app"
     envVars:
       - key: SECRET_KEY
         generateValue: true
