--- a/render.yaml
+++ b/render.yaml
@@ -3,16 +3,26 @@ services:
     name: kiddie-color-creations-backend
     env: python
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "gunicorn --bind 0.0.0.0:$PORT app:app"
+    startCommand: "gunicorn --chdir backend app:app"
     envVars:
       - key: SECRET_KEY
         generateValue: true
       - key: JWT_SECRET_KEY
         generateValue: true
       - key: ADMIN_KEY
-        value: admin123
+        generateValue: true
+      - key: ADMIN_USERNAME
+        value: admin
+      - key: ADMIN_PASSWORD
+        generateValue: true # Will be used for first-time setup only
       - key: IMAGE_API_ENDPOINT
         value: https://api.gptgod.online/v1/chat/completions
       - key: IMAGE_API_KEY
-        sync: false  # 需要手动设置
-    healthCheckPath: /api/auth/health
+        sync: false
+      - key: DATABASE_URL
+        fromDatabase:
+          name: kiddie-color-creations-db
+          property: connectionString
+    databases:
+      - name: kiddie-color-creations-db
+        plan: free
