--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: kiddie-color-creations-backend
     env: python
     buildCommand: "pip install -r backend/requirements.txt"
-    startCommand: "cd backend && gunicorn --workers=1 --timeout=120 --threads=2 --max-requests=100 --max-requests-jitter=10 app:app"
+    startCommand: "cd backend && gunicorn --bind 0.0.0.0:$PORT --workers=1 --timeout=120 --threads=2 --max-requests=100 --max-requests-jitter=10 app:app"
     envVars:
       - key: SECRET_KEY
         generateValue: true
