--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -24,6 +24,7 @@ PyJWT==2.10.1
 python-dotenv==1.1.1
 requests==2.32.4
 SQLAlchemy==2.0.41
+supabase==2.18.0
 typing_extensions==4.14.0
 urllib3==2.5.0
 Werkzeug==3.1.3
